--- a/CmakeLists.txt
+++ b/CmakeLists.txt
@@ -13,12 +13,14 @@ set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
 add_subdirectory(lib/glfw)
 add_subdirectory(lib/glm)
 
-set(COMMON_LIBS glfw glm)
+set(VULKAN_SDK_PATH C:/VulkanSDK/1.2.198.1)
+set(COMMON_LIBS glfw glm ${VULKAN_SDK_PATH}/Lib/vulkan-1.lib)
 
 include_directories(${PROJECT_NAME}
 	${PROJECT_SOURCE_DIR}/include
   ${PROJECT_SOURCE_DIR}/lib/glfw/include
   ${PROJECT_SOURCE_DIR}/lib/glm
+  ${VULKAN_SDK_PATH}/Include
 )
 
 set(SRC_FILES
