--- a/CmakeLists.txt
+++ b/CmakeLists.txt
@@ -18,7 +18,7 @@ set(COMMON_LIBS glfw glm ${VULKAN_SDK_PATH}/Lib/vulkan-1.lib)
 
 include_directories(${PROJECT_NAME}
   ${PROJECT_SOURCE_DIR}/include
-  ${PROJECT_SOURCE_DIR}/include/vk
+  ${PROJECT_SOURCE_DIR}/src/Vulkan
   ${PROJECT_SOURCE_DIR}/lib/glfw/include
   ${PROJECT_SOURCE_DIR}/lib/glm
   ${VULKAN_SDK_PATH}/Include
@@ -27,9 +27,10 @@ include_directories(${PROJECT_NAME}
 set(SRC_FILES
   src/main.cpp
   src/PlitaRoot.cpp
-  src/PlitaWindow.cpp
+  src/WindowSystem.cpp
   src/RenderSystem.cpp
-  src/Vulkan/VulkanInstance.cpp
+  src/Vulkan/VulkanDevice.cpp
+  src/Vulkan/VulkanWindow.cpp
 )
 
 set(RESOURCE_FILES)
